# maze-solver

./: .gitignore  CMakeLists.txt  DOCS.md  LICENSE.md  README.md  algo.c  algo.h  build.sh  build_library.sh  main.c  main.py
src/: algos.c  algos.h  handlers.c  handlers.h  main.c  process.c  process.h
